--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "i": "^0.3.7",
     "npm": "^10.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
