--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
     "i": "^0.3.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
